# glow-effects

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/effects/: mod.rs  shine.rs
src/transform/: geometry.rs
src/util/: color.rs  color_point.rs  effect.rs  mod.rs  point.rs
